--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     <div class="contact-clean">
         <form method="post">
             <h2 class="text-center">Ejercicio clase 1 React</h2>
-            <div class="form-group"><input class="form-control" type="text" name="Nombre" placeholder="Nombre"></div>
-            <div class="form-group"><input class="form-control" type="number" required="" name="numero_1" placeholder="Ingrese un numero entero"></div>
-            <div class="form-group"><input class="form-control" type="number" name="numero_2" placeholder="ingrese un numero entero"></div>
-            <div class="form-group"><button class="btn btn-primary" type="submit">send </button></div>
+            <div class="form-group"><input id="nombre" class="form-control" type="text" name="Nombre" placeholder="Nombre"></div>
+            <div class="form-group"><input id="numero_1" class="form-control" type="number" required="" name="numero_1" placeholder="Ingrese un numero entero"></div>
+            <div class="form-group"><input id="numero_2" class="form-control" type="number" name="numero_2" placeholder="ingrese un numero entero"></div>
+            <div class="form-group"><button id="enviar" class="btn btn-primary" type="submit">send </button></div>
         </form>
     </div>
     <div class="container"></div>
@@ -26,6 +26,8 @@
     <div></div>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script type="module" src="assets/js/modulo.js"></script>
+    <script src="assets/js/code.js"></script>
 </body>
 
 </html>
